<resources>
    <string name="app_name">Kupping Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">maiconpintoabreu@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_sign_up">Sign up</string>
    <string name="menu_camera_qr">Camera QR</string>
    <string name="menu_students">Students</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="log_in_label">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="company_hint">Company</string>
    <string name="username_hint">Username</string>
    <string name="student_hint">Student</string>
    <string name="organizer_hint">Organizer</string>
    <string name="confirm_hint">Confirm Password</string>
    <string name="title_activity_camera_qr">CameraQRActivity</string>
    <string name="controls">Controls</string>
    <string name="menu_dance_classes">Dance Classes</string>
    <string name="title_event_list">Events</string>
    <string name="title_event_detail">Event Detail</string>


    <string name="title_event_new">New Event</string>
    <string name="name_hint">Name</string>
    <string name="style_hint">Style</string>
    <string name="about_hint">About</string>
    <string name="start_hint">Start</string>
    <string name="start_from_hint">From</string>
    <string name="finish_hint">Finish</string>
    <string name="finish_to_hint">To</string>
    <string name="repeat_hint">Repeat</string>
    <string name="place_hint">Place</string>
    <string name="zip_code_hint">Zip Code</string>
    <string name="country_hint">Country</string>
    <string name="city_hint">City</string>
    <string name="address_hint">Address</string>
    <string name="create_event">Create Event</string>
    <string name="new_event">New Event</string>
    <string name="save_event_label">Save Event</string>
    <string name="style_label">Event Style</string>
    <string name="qr_code">QR Code</string>
    <string name="send_to">Send Image</string>
    <string name="share_ticket">Share ticket</string>
    <string name="delete">Delete</string>


</resources>
