<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/menu_logout"/>
    </group>

    <item android:title="@string/controls">
        <menu>
            <item
                    android:id="@+id/nav_camera"
                    android:icon="@drawable/ic_menu_camera"
                    android:title="@string/menu_camera_qr"/>
            <item
                    android:id="@+id/nav_dance_class"
                    android:icon="@drawable/ic_menu_dance_class"
                    android:title="@string/menu_dance_classes"/>
        </menu>
    </item>

</menu>
