<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_sign_up"
        tools:context=".SignUpActivity">


    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="48dp" />

    <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:layout_marginTop="8dp"
            android:focusable="true"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            android:focusableInTouchMode="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input"
            style="@style/Widget.TextInputLayout"
            android:layout_marginTop="48dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input_edit"
                style="@style/Widget.TextEdit"
                android:hint="@string/username_hint"
                android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            style="@style/Widget.TextInputLayout"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_input">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_input_edit"
                style="@style/Widget.TextEdit"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            style="@style/Widget.TextInputLayout"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_input"
            app:passwordToggleTint="@color/color_input_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input_edit"
                style="@style/Widget.TextEdit"
                android:hint="@string/password_hint"
                android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <Switch
            android:text="@string/student_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/password_input"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/student"/>
    <Switch
            android:text="@string/organizer_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/student"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/organizer"/>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/company_input"
            style="@style/Widget.TextInputLayout"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/organizer"
            app:passwordToggleTint="@color/color_input_hint">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/company_input_edit"
                style="@style/Widget.TextEdit"
                android:hint="@string/company_hint"
                android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_label"
            android:gravity="center"
            android:layout_marginTop="48dp"
            app:layout_constraintTop_toBottomOf="@+id/company_input"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/btn_sign_up"
    />
</androidx.constraintlayout.widget.ConstraintLayout>