<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/qr_code_dialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:gravity="center">

    <ImageView
            android:id="@+id/qr_code_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/qr_code"
            android:layout_marginTop="@dimen/guideline_margin"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50" />
    <Button
            android:id="@+id/share_qr_code_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_ticket"
            android:layout_marginTop="@dimen/guideline_margin"
            app:layout_constraintLeft_toRightOf="@id/guideline_buttons"
            app:layout_constraintRight_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/qr_code_image" />
    <Button
            android:id="@+id/delete_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_marginTop="@dimen/guideline_margin"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toLeftOf="@id/guideline_buttons"
            app:layout_constraintTop_toBottomOf="@+id/qr_code_image"  />

</androidx.constraintlayout.widget.ConstraintLayout>
